Add task to install Docker prerequisites in main.yml

--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -1,1 +1,11 @@
+- name: Install prerequisites for Docker
+  apt: 
+    name: 
+      - apt-transport-https
+      - ca-certificates
+      - curl
+      - software-properties-common
+    update_cache: true
+    state: present
+
 
