--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -1,19 +1,43 @@
 all:
   children:
-    grafana_servers:
+    docker_servers:
       hosts:
         server1: {}
+        server2: {}
+
+    node_exporter_servers:
+      hosts:
+        server1: {}
+        server2: {}
         
+    promtail_servers:
+      hosts:
+        server1: {}
+        server2: {}
+
     prometheus_servers:
       hosts:
-        server1: {}
+        core_server: {}
+
+    grafana_servers:
+      hosts:
+        core_server: {} 
 
     loki_servers:
       hosts:
-        server1: {}
-        
+        core_server: {}
+
   vars:
     server1:
       ansible_host: 192.168.1.10
       ansible_ssh_private_key_file: ~/.ssh/id_rsa
       ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
+    server2:
+      ansible_host: 192.168.1.11
+      ansible_ssh_private_key_file: ~/.ssh/id_rsa
+      ansible_ssh_common_args: '-o StrictHostKeyChecking=no'  
+    core_server:
+      ansible_host: 192.168.1.12
+      ansible_ssh_private_key_file: ~/.ssh/id_rsa
+      ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
+
