Add core_server to inventory/hosts.yml and clean up formatting

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -4,12 +4,13 @@ all:
       hosts:
         server1: {}
         server2: {}
+        core_server: {}
 
     node_exporter_servers:
       hosts:
         server1: {}
         server2: {}
-        
+
     promtail_servers:
       hosts:
         server1: {}
