--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -5,6 +5,7 @@ all:
         server1: {}
         server2: {}
         core_server: {}
+        monitoring_server: {}
 
     node_exporter_servers:
       hosts:
@@ -39,6 +40,10 @@ all:
       ansible_ssh_common_args: '-o StrictHostKeyChecking=no'  
     core_server:
       ansible_host: 192.168.1.12
+      ansible_ssh_private_key_file: ~/.ssh/id_rsa
+      ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
+    monitoring_server:
+      ansible_host: 192.168.1.13
       ansible_ssh_private_key_file: ~/.ssh/id_rsa
       ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
 
