Update inventory/hosts.yml to rename core_server to control_plane_server and adjust server group assignments; modify Makefile to point to the new docker playbook; add .env to .gitignore; remove obsolete playbooks for Docker, Grafana, Loki, Node Exporter, and Prometheus.

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -4,30 +4,32 @@ all:
       hosts:
         server1: {}
         server2: {}
-        core_server: {}
+        control_plane_server: {}
         monitoring_server: {}
 
     node_exporter_servers:
       hosts:
         server1: {}
         server2: {}
+        control_plane_server: {}
 
     promtail_servers:
       hosts:
         server1: {}
         server2: {}
+        control_plane_server: {}
 
     prometheus_servers:
       hosts:
-        core_server: {}
+        monitoring_server: {}
 
     grafana_servers:
       hosts:
-        core_server: {} 
+        monitoring_server: {} 
 
     loki_servers:
       hosts:
-        core_server: {}
+        monitoring_server: {}
 
   vars:
     server1:
@@ -38,7 +40,7 @@ all:
       ansible_host: 192.168.1.11
       ansible_ssh_private_key_file: ~/.ssh/id_rsa
       ansible_ssh_common_args: '-o StrictHostKeyChecking=no'  
-    core_server:
+    control_plane_server:
       ansible_host: 192.168.1.12
       ansible_ssh_private_key_file: ~/.ssh/id_rsa
       ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
