Add base_setup_servers group to inventory/hosts.yml with server definitions for better organization and management of server roles.

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -1,5 +1,12 @@
 all:
   children:
+    base_setup_servers:
+      hosts:
+        server1: {}
+        server2: {}
+        control_plane_server: {}
+        monitoring_server: {}
+
     docker_servers:
       hosts:
         server1: {}
