Refactor run.sh to improve error handling and input validation; add color-coded output functions for better user feedback.

--- a/inventory/hosts.yml
+++ b/inventory/hosts.yml
@@ -4,27 +4,23 @@ all:
       hosts:
         server1: {}
         server2: {}
-        control_plane_server: {}
         monitoring_server: {}
 
     docker_servers:
       hosts:
         server1: {}
         server2: {}
-        control_plane_server: {}
         monitoring_server: {}
 
     node_exporter_servers:
       hosts:
         server1: {}
         server2: {}
-        control_plane_server: {}
 
     promtail_servers:
       hosts:
         server1: {}
         server2: {}
-        control_plane_server: {}
 
     prometheus_servers:
       hosts:
@@ -32,7 +28,7 @@ all:
 
     grafana_servers:
       hosts:
-        monitoring_server: {} 
+        monitoring_server: {}
 
     loki_servers:
       hosts:
@@ -42,17 +38,12 @@ all:
     server1:
       ansible_host: 192.168.1.10
       ansible_ssh_private_key_file: ~/.ssh/id_rsa
-      ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
+      ansible_ssh_common_args: "-o StrictHostKeyChecking=no"
     server2:
       ansible_host: 192.168.1.11
       ansible_ssh_private_key_file: ~/.ssh/id_rsa
-      ansible_ssh_common_args: '-o StrictHostKeyChecking=no'  
-    control_plane_server:
-      ansible_host: 192.168.1.12
-      ansible_ssh_private_key_file: ~/.ssh/id_rsa
-      ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
+      ansible_ssh_common_args: "-o StrictHostKeyChecking=no"
     monitoring_server:
       ansible_host: 192.168.1.13
       ansible_ssh_private_key_file: ~/.ssh/id_rsa
-      ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
-
+      ansible_ssh_common_args: "-o StrictHostKeyChecking=no"
