--- a/roles/node_exporter/tasks/main.yml
+++ b/roles/node_exporter/tasks/main.yml
@@ -15,3 +15,14 @@
     dest: "/opt/"
     remote_src: yes
 
+- name: Create systemd service file
+  ansible.builtin.template:
+    src: "node_exporter.service.j2"
+    dest: "/etc/systemd/system/node_exporter.service"
+    mode: '0644'
+
+- name: Enable and start node_exporter service
+  ansible.builtin.systemd:
+    name: "node_exporter"
+    state: started
+    enabled: yes
