--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,12 +1,27 @@
 [defaults]
-inventory = ./inventory/hosts.yml
-roles_path = ./roles
-retry_files_enabled = False
+inventory = inventories/hosts.yml
+roles_path = roles:~/.ansible/roles:/usr/share/ansible/roles
+collections_path = collections:~/.ansible/collections:/usr/share/ansible/collections
 host_key_checking = False
 remote_user = ansible
+retry_files_enabled = False
+stdout_callback = yaml
+bin_ansible_callbacks = True
+callback_whitelist = profile_tasks, timer
+
+[inventory]
+enable_plugins = host_list, script, auto, yaml, ini, toml
 
 [privilege_escalation]
 become = True
 become_method = sudo
+become_user = root
+become_ask_pass = False
 
+[ssh_connection]
+ssh_args = -C -o ControlMaster=auto -o ControlPersist=60s
+pipelining = True
 
+[callback_profile_tasks]
+task_output_limit = 20
+sort_order = desc
