Add monitoring user setup and system update tasks to base_setup role
- Introduced configuration for a monitoring user, including user creation, SSH key management, and basic directory structure.
- Added system update tasks to manage package cache updates, package upgrades, and installation of essential monitoring packages.
- Configured timezone settings and time synchronization using chrony, including service management and synchronization checks.
- Enhanced task organization with clear tagging for better task management and execution.

--- a/roles/infrastructure/base_setup/defaults/main.yml
+++ b/roles/infrastructure/base_setup/defaults/main.yml
@@ -1,1 +1,24 @@
+# Time configuration
 timezone: "UTC"
+
+# System update settings
+base_setup_update_cache: true
+base_setup_upgrade_packages: true
+
+# Monitoring user configuration
+monitoring_user_name: "monitoring"
+monitoring_user_password: "!"
+monitoring_user_shell: "/bin/bash"
+
+# SSH key for monitoring user (provide this in group_vars or host_vars)
+# monitoring_user_ssh_key: "ssh-rsa AAAA..."
+
+# Essential packages for monitoring setup
+base_setup_packages:
+  - curl
+  - wget
+  - htop
+  - vim
+  - python3
+  - python3-pip
+  - chrony
